--- a/translations/de.xml
+++ b/translations/de.xml
@@ -334,8 +334,39 @@
 
     <!-- Settings - Advanced -->
     <string name="settings_advanced_title">Erweiterte Einstellungen</string>
+    <string name="settings_advanced_menu_option_config_updater">Plattform- &amp; Emulator-Konfiguration Update</string>
     <string name="settings_advanced_menu_option_custom_platform_config">Benutzerdefinierte Plattformkonfigurationen</string>
     <string name="settings_advanced_menu_option_custom_emulator_apps">Benutzerdefinierte Emulatoren</string>
+
+    <!-- Settings - Config Updater -->
+    <string name="settings_config_updater_title">@string/settings_advanced_menu_option_config_updater</string>
+    <string name="settings_config_updater_label_checking_for_update">Nach Updates suchen</string>
+    <string name="settings_config_updater_label_up_to_date">Deine Konfiguration ist auf dem neuesten Stand</string>
+    <string name="settings_config_updater_label_up_to_date_update_successful">Das Update wurde erfolgreich installiert</string>
+    <string name="settings_config_updater_label_up_to_date_installed_version">Version %d</string>
+    <string name="settings_config_updater_cta_update">Jetzt installieren</string>
+    <string name="settings_config_updater_update_title">Update verfügbar</string>
+    <string name="settings_config_updater_update_subtitle">@string/settings_config_updater_label_up_to_date_installed_version</string>
+    <string name="settings_config_updater_update_description">Dieses Update enthält:</string>
+    <string name="settings_config_updater_update_hint">Die Installation dauert normalerweise nur wenige Sekunden</string>
+    <string name="settings_config_updater_button_cancel_update">Vielleicht später</string>
+    <string name="settings_config_updater_error_cta_retry">Erneut versuchen</string>
+    <string name="settings_config_updater_error_button_cancel">@string/common_cancel</string>
+    <string name="settings_config_updater_cta_up_to_date">@string/common_okay</string>
+    <string name="settings_config_updater_installation_progress_initial">Vorbereiten der Installation</string>
+    <string name="settings_config_updater_installation_progress_download">Herunterladen des Updates</string>
+    <string name="settings_config_updater_installation_progress_verification">Update wird überprüft</string>
+    <string name="settings_config_updater_installation_progress_installation">Update wird installiert</string>
+    <string name="settings_config_updater_installation_progress_warning">Schließe nicht die App! Wenn die App jetzt beendet wird, kann deine Konfiguration beschädigt werden.</string>
+    <string name="settings_config_updater_error_no_internet_connection">@string/item_options_scrape_error_no_internet_connection</string>
+    <string name="settings_config_updater_error_checking_updates_failed">Updatesuche fehlgeschlagen</string>
+    <string name="settings_config_updater_error_download_failed">Herunterladen des Updates ist fehlgeschlagen</string>
+    <string name="settings_config_updater_error_incompatible_schema">Das Update ist nicht kompatibel mit deiner App-Version</string>
+    <string name="settings_config_updater_error_incompatible_schema_subtitle">Eventuell ist eine neue App-Version im PlayStore verfügbar</string>
+    <string name="settings_config_updater_error_verification_failed">Das Update ist beschädigt</string>
+    <string name="settings_config_updater_error_installation_failed">Installtion fehlgeschlagen</string>
+    <string name="settings_config_updater_error_generic">@string/settings_config_updater_error_installation_failed</string>
+    <string name="settings_config_updater_error_subtitle_not_installed">Deine installierte Konfiguration wurde nicht verändert.</string>
 
     <!-- Settings - Custom emulator apps -->
     <string name="settings_custom_emulator_apps_title">Benutzerdefinierte Emulatoren</string>
